[project]
name = 'unpython'
authors = [
    {name='Markus H (MawKKe)', email='markus@mawkke.fi'}
]
description = 'Un-pythons a python subprocess command+arguments list back into CLI-friendly form.'
version = "0.1.0"
license = {text = 'Apache License 2.0'}
readme = 'README.md'
requires-python = '>=3.8'
dependencies = []


[project.urls]
homepage = 'https://github.com/MawKKe/unpython'
Issues = 'https://github.com/MawKKe/unpython/issues'

[project.scripts]
unpython = 'unpython:main'
